--- a/src/App.scss
+++ b/src/App.scss
@@ -12,27 +12,67 @@ h1 {
 }
 .App-header {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  max-width: 300px; 
+  width: 100%;
+  margin: 0 auto; 
 }
 .nav-item {
   color: white;
   border: 1px solid white;
   padding: 10px 20px;
   text-decoration: none;
-  margin-left: 1rem;
   margin-top: 2.5rem;
 }
+
+.weather {
+  color: white;
+  .temperature {
+    font-size: 10rem;
+    font-weight: 700;
+    display: block;
+    margin-bottom: 0;
+    .celsius {
+      font-size: 5rem;
+      font-weight: 500;
+    }
+  }
+  .description {
+    margin-top: 0;
+    font-size: 2.4rem;
+    font-weight: 700;
+    letter-spacing: 5px;
+  }
+  @media screen and(max-width: 500px) {
+    .temperature {
+      font-size: 8rem;
+      .celsius {
+        font-size: 3rem;
+        font-weight: 500;
+      }
+    }
+    .description {
+
+      font-size: 1.7rem;
+
+    }
+  }
+}
+
+.schedulewrap {
+  padding: 0 1rem;
+}
+
 .buswrap {
-  background-color: white;
+  background-color: rgba(255,255,255,0.3);
   margin-bottom: 1rem;
   padding: 1rem 1.5rem;
-  width: 50%;
+  max-width: 400px;
   border-radius: 2px;
   margin: 1rem auto;
   transition:  .3s all;
-  
+  color: white;
   display: flex;
-  opacity: .8;
   justify-content: space-around;
   box-shadow: 0px 0px  #26a0da;
   &:hover {
@@ -42,10 +82,12 @@ h1 {
     
   }
   .busfrom {
-
+    width: 60%;
+    text-align: left;
   }
   .busto {
-
+    width: 35%;
+    text-align: left;
   }
 }
 
@@ -54,4 +96,55 @@ h1 {
   0%   {transform: rotate(0deg);}
   50%  {transform: rotate(2deg);}
   100% {transform: rotate(0deg);}
+}
+
+#loader-container {
+  width: 200px;
+  height: 200px;
+  color: white;
+  margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  border: 5px solid #3498db;
+  border-radius: 50%;
+  -webkit-animation: borderScale 1s infinite ease-in-out;
+  animation: borderScale 1s infinite ease-in-out;
+}
+
+#loadingText {
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  font-size: 2em;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
+@-webkit-keyframes borderScale {
+  0% {
+    border: 5px solid white;
+  }
+  50% {
+    border: 25px solid #3498db;
+  }
+  100% {
+    border: 5px solid white;
+  }
+}
+
+@keyframes borderScale {
+  0% {
+    border: 5px solid white;
+  }
+  50% {
+    border: 25px solid #3498db;
+  }
+  100% {
+    border: 5px solid white;
+  }
 }
