--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,700,900');
+
 body {
   margin: 0;
   padding: 0;
-  font-family: "Oxygen",
+  font-family: 'Work Sans',
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
