--- a/src/App.scss
+++ b/src/App.scss
@@ -32,6 +32,7 @@ h1 {
     font-weight: 700;
     display: block;
     margin-bottom: 0;
+    margin-top: 1rem;
     .celsius {
       font-size: 5rem;
       font-weight: 500;
@@ -56,6 +57,16 @@ h1 {
       font-size: 1.7rem;
 
     }
+  }
+}
+
+.shibe_wrap {
+  display: block;
+  margin: 2rem auto;
+  max-width: 800px;
+  padding: 0 1rem;
+  img {
+    width: 100%;
   }
 }
 
