--- a/src/App.scss
+++ b/src/App.scss
@@ -27,22 +27,36 @@ h1 {
 
 .weather {
   color: white;
+  .pretitle {
+    display: block;
+    font-size: 1rem;
+    font-weight: 600;
+    margin-top: 3rem;
+    letter-spacing: 2px;
+  }
   .temperature {
     font-size: 10rem;
     font-weight: 700;
     display: block;
     margin-bottom: 0;
-    margin-top: 1rem;
+    margin-top: 0rem;
+    padding-top: 0;
+    line-height: 8rem;
     .celsius {
       font-size: 5rem;
       font-weight: 500;
     }
   }
   .description {
-    margin-top: 0;
-    font-size: 2.4rem;
+    margin: -1.3rem auto 0;
+    padding-top: 8px;
+    font-size: 2rem;
     font-weight: 700;
+    display:block;
+    max-width: 500px;
     letter-spacing: 5px;
+    border-top: 1px solid white;
+    text-transform: uppercase;
   }
   @media screen and(max-width: 500px) {
     .temperature {
@@ -53,7 +67,7 @@ h1 {
       }
     }
     .description {
-
+      margin-top: -1.9rem;
       font-size: 1.7rem;
 
     }
@@ -61,8 +75,9 @@ h1 {
 }
 
 .shibe_wrap {
+  font-size: 1rem;
   display: block;
-  margin: 2rem auto;
+  margin: 3rem auto;
   max-width: 800px;
   padding: 0 1rem;
   img {
